fix: compile errors due to deprecated JVM option