@@ -9,8 +9,6 @@ lazy val root = (project in file("."))
     scriptedLaunchOpts ++= List(
       "-Xms1024m",
       "-Xmx1024m",
-      "-XX:ReservedCodeCacheSize=128m",
-      "-XX:MaxPermSize=256m",
       "-Xss2m",
       "-Dfile.encoding=UTF-8"
     ),
